<resources>
	<string name="app_name">GeoKrety Logger</string>
	<string name="main_label_welcome">GeoKrety Logger is a program to assist in the logging or moving of GeoKrets. GeoKrety\'s 
		(<a href="http://en.m.wikipedia.org/wiki/Geokrety">en.m.wikipedia.org/wiki/Geokrety</a>)
		are similar to a TravelBug(TM) or GeoLutins, their purpose being to track objects you leave in
		geocache containers
		(<a href="http://en.m.wikipedia.org/wiki/Geocaching">en.m.wikipedia.org/wiki/Geocaching</a>).
	</string>
	<string name="main_button_accounts">Profiles (accounts)</string>
	<string name="main_button_inventory">Inventory</string>
	<string name="main_button_ocs">Geocaching last logs</string>
	<string name="main_button_log">Log GeoKret</string>
	<string name="main_button_gkl">Saved logs</string>
	<string name="main_button_about">About</string>
	<string name="main_label_version_prefix">GeoKrety Logger v</string>
	<string name="main_label_copyright">Copyright &#169; by Michał Niedźwiecki 2013, 2014</string>
	<string name="main_label_about">WWW:
		<a href="http://geokretylog.sourceforge.net/">geokretylog.sourceforge.net</a>
	</string>
	<string name="main_label_emergency">If this program is not working, please visit: 
		<a href="http://geokrety.org/ruchy.php">geokrety.org/ruchy.php</a>
		Afterwards please contact with me on the web site:
		<a href="http://geokrety.org/majluj.php?to=12444">http://geokrety.org/majluj.php?to=12444</a>.
	</string>
	<string name="main_label_help_in_translation">Suggest a better translation:\n
		<a href="http://geokretylog.sourceforge.net/translate.php">geokretylog.sourceforge.net/translate.php</a>
	</string>
	<string name="main_message_error_no_account_configured">You must configure your account!</string>
	<string name="title_activity_accounts">GeoKrety profile manager</string>
	<string name="button_add_account">Add profile</string>
	<string name="account_edit">Edit</string>
	<string name="account_remove">Remove</string>
	<string name="accounts_remove_question">Are you sure you want to remove profile? </string>
	<string-array name="context_menu_account">
		<item>@string/account_edit</item>
		<item>@string/account_remove</item>
	</string-array>
	<string name="title_activity_account">Profile</string>
	<string name="account_portals">Choose which portal to use</string>
	<string name="account_account_name_hint">New user</string>
	<string name="account_portal_gk">geokrety.org (required)</string>
	<string name="account_portal_oc0">opencaching.pl</string>
	<string name="account_portal_oc1">opencaching.de (with .es and .it)</string>
	<string name="account_portal_oc2">opencaching.us</string>
	<string name="account_portal_oc3">opencaching.nl</string>
	<string name="account_portal_oc4">opencaching.org.uk</string>
	<string name="account_portal_gc">geocaching.com (own your risk!)</string>
	<string name="account_introduction">Privacy policy:
	    \ngeokrety.org - login and password is used for download &quot;secid&quot;. Login and &quot;secid&quot; is stored, but password not.
	    Login is used as profile name. &quot;Secid&quot; is used for loading your inventory and logging moves of GeoKrets via official GeoKrety API.\n
	    
	    \nopencaching.* - login is stored and used for loading your last geocache logs via official OKAPI.\n
	    
	    \ngeocaching.com - login and password is stored and used for loading your last geocache logs and geocache coordinates via parsing of geocaching.com website.
	    Warning! Using of this method probably break geocaching\'s terms of use paragraph 2.D.i and 2.D.ii. Use at your own risk!
	    However similar method is used in c:geo app and no problems :)
	</string>
	<string name="account_home_location">Home coordinates (optional):</string>
	<string name="account_latitude_hint">latitude</string>
	<string name="account_longnitude_hint">longitude</string>
	<string name="account_from_gps">GPS</string>
	<string name="account_save">OK</string>
	<string name="account_save_title">Save profile settings?</string>
	<string name="account_save_message">Profile settings changed. Save changes?</string>
	<string name="download_login_gk">Login to GeoKrety.org&#8230;</string>
	<string name="download_getting_uuid">Getting UUID from</string>
	<string name="download_login_gc">Login to Geocaching.com&#8230;</string>
	<string name="dots">&#8230;</string>
	<string name="title_dialog_gk">Login and password for GeoKrety.org</string>
	<string name="login">GK login:</string>
	<string name="password">GK password:</string>
	<string name="login_hint">GeoKrety login</string>
	<string name="password_hint">GeoKrety password</string>
	<string name="error_login_null">GeoKrety.org login can not be empty</string>
	<string name="error_password_null">GeoKrety.org password can not be empty</string>
	<string name="login_error_password_message">Invalid GeoKrety login or password.</string>
	<string name="title_dialog_oc">Login to:</string>
	<string name="oc">OC login:</string>
	<string name="oc_hint">OpenCaching login</string>
	<string name="error_oc_null">OpenCaching login can not be empty</string>
	<string name="invalid_oclogin_error_message">Invalid login to:</string>
	<string name="title_dialog_gc">Login and password for Geocaching.com</string>
	<string name="gc_login">Geocaching.com login:</string>
	<string name="gc_password">Geocaching.com password:</string>
	<string name="gc_login_hint">Geocaching.com login</string>
	<string name="gc_password_hint">Geocaching.com password</string>
	<string name="error_gc_login_null">Geocaching.com login can not be empty</string>
	<string name="error_gc_password_null">Geocaching.com password can not be empty</string>
	<string name="gc_login_error_password_message">Invalid Geocaching.com login or password.</string>
	<string name="gc_login_password_message">Login and password to Geocaching.com is valid.</string>
	<string name="title_activity_inventory">GeoKrety inventory</string>
	<string name="menu_inventory_refresh">Refresh</string>
	<string name="inventory_error_message">Inventory retrieval error. Please check your Interent connection.</string>
	<string name="button_add_geokret">Add manually</string>
	<string name="title_activity_geo_kret">GeoKret</string>
	<string name="geokret_id_title">Reference Number:</string>
	<string name="geokret_id_type">Type:</string>
	<string name="geokret_nr_title">Tracking Code:</string>
	<string name="geokret_nr_hint">i.e. F65RF3</string>
	<string name="geokret_name_title">Name:</string>
	<string name="geokret_name_hint">name of GeoKret</string>
	<string-array name="geokret_id_types">
		<item>Traditional</item>
		<item>A book/CD/DVD&#8230;</item>
		<item>A human</item>
		<item>A coin</item>
		<item>KretyPost</item>
	</string-array>
	<string name="geokret_sticki_title">Do not remove from inventory after refresh</string>
	<string name="geokret_save">Save</string>
	<string name="geokret_save_title">Save GeoKret settings?</string>
	<string name="geokret_save_message">GeoKret settings changed. Save changes?</string>
	<string name="geokret_message_error_invalid_trackingcode">Please enter a valid Tracking Code: 6 characters from GeoKret label, eg. XF3ACS</string>
	<string name="title_activity_last_ocs">Last log from geocaching portals</string>
	<string name="menu_ocs_refresh">Refresh</string>
	<string name="oclogs_error_message">Geocaching logs retrieval error. Please check your Internet connection.
	</string>
	<string name="title_activity_log">Log GeoKret</string>
	<string name="form_log_type">1. Chose log type</string>
	<string name="log_drop">I\'ve dropped GeoKret</string>
	<string name="log_grab">I\'ve grabbed GeoKret</string>
	<string name="log_met">I\'ve met GeoKret</string>
	<string name="log_dipped">I\'ve dipped a GeoKret</string>
	<string name="log_comment">Comment</string>
	<string-array name="log_array">
		<item>Choose a log type&#8230;</item>
	    <item>@string/log_drop</item>
		<item>@string/log_grab</item>
		<item>@string/log_met</item>
		<item>@string/log_dipped</item>
		<item>@string/log_comment</item>
		<item>Choose log type&#8230;</item>
	</string-array>
	<string name="form_identify">2. Identify GeoKret</string>
	<string name="form_code">Tracking code</string>
	<string name="form_profile">Who? &#8230;</string>
	<string name="form_inventory">Inventory&#8230;</string>
	<string name="form_location">3. New location</string>
	<string name="form_waypoint">Waypoint</string>
	<string name="form_oclogs">OC Log&#8230;</string>
	<string name="form_cords">Coordinates</string>
	<string name="form_gps">GPS</string>
	<string name="form_home">Home</string>
	<string name="form_location_description">When you use a waypoint, then using coordinates is not necessary because
		GeoKrety.org uses coordinates from the waypoint.</string>
	<string name="form_additional">4. Additional data</string>
	<string name="form_comment">Comment</string>
	<string name="form_submit_button">Send</string>
	<string name="form_save_draft_button">Postpone</string>
	<string name="form_remove_button">Delete</string>
	<string name="title_dialog_inventory">Your inventory</string>
	<string name="title_dialog_ocs">Your latest logs in geocaching portals</string>
	<string name="form_confirm_delete_msg">Delete this log entry?</string>
	<string name="warning_already_logged">There is an entry with this date. Correct the date or the hour.</string>
	<string name="submit_title">Submitting log</string>
	<string name="submit_message">Logging of geokret is being submitted&#8230;</string>
	<string name="submit_finish">GeoKret logging finished</string>
	<string name="submit_broken">GeoKret logging broken but GeoKret still be logged</string>
	<string name="submit_fail">Submission failed: </string>
	<string name="title_activity_geokretlogs">GeoKret logs</string>
	<string name="row_log_icon_contentDescription">Log type</string>
	<string name="row_log_statusLabel">Status:</string>
	<string name="row_log_profileLabel">User:</string>
	<string name="log_status_draft">Draft</string>
	<string name="log_status_new">New</string>
	<string name="log_status_double">Duplicated</string>
	<string name="log_status_problem">Error</string>
	<string name="log_status_success">Success</string>
	<string name="log_status_queue">Queue</string>
	<string name="log_status_unidentified">Unidentified</string>
	<string name="button_submit_all_drafts">Submit drafts</string>
	<string name="button_remove_all_saved_logs">Remove all</string>
	<string name="form_confirm_delete_all_msg">Delete all log entries?</string>
	<string name="download_title">Refreshing user profile</string>
	<string name="download_getting_gk">Getting inventory from GeoKrety.org&#8230;</string>
	<string name="download_getting_ocs">Getting latest logs from</string>
	<string name="download_getting_names">Getting geocache names from</string>
	<string name="download_finish">Refreshing finish</string>
	<string name="error_current_null">Please select profile.</string>
	<string name="login_error_message">Connection error: </string>
	<string name="warning">Some problems:</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="generic_error">Error:</string>
	<string name="generic_broken">Broken</string>
	<string name="generic_finish">Successful</string>
	<string name="not_implemented_yet">Not implemented yet</string>
	<string name="supported_formats">Supported formats:
		http://geokrety.org/help_generate.php?help=pl#acceptableformats</string>
	<string name="gps_not_exist">GPS module does not exist in this device</string>
	<string name="gps_not_enabled">GPS is off, please turn on GPS module</string>
	<string name="gps_acquiring">waiting for fix</string>
	<string name="gps_pleas_wait">Please wait for GPS fix</string>
	<string name="gps_fixed">GPS fixed, coords inserted</string>
	<string name="message_do_submitting">Log is being submitted in the background&#8230;</string>
	<string name="message_draft_saved">Log saved in drafts&#8230;</string>
</resources>