<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:text="@string/form_submit" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reset"
            android:text="@string/form_clear" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_log_type"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/logTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/log_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_identify"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <Button
                    android:id="@+id/accountsButton"
                    style="@android:style/Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showAccountsActivity" />
<!--  
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/accountsSpiner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/accountsButton"
                    style="@android:style/Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showAccountsActivity"
                    android:text="@string/form_accounts" />
            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/trackingCodeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:hint="@string/form_code" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/inventoryButton"
                    style="@android:style/Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="showInventory"
                    android:text="@string/form_inventory" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_location"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/waypointEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:hint="@string/form_waypoint" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/ocsButton"
                    style="@android:style/Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="showOcs"
                    android:text="@string/form_oclogs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/coordinatesEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/form_cords" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/gpsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setCoordinatesFromGPS"
                    android:text="@string/form_gps" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_additional"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/datePicker"
                    style="@android:style/Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:onClick="checkDate"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/timePicker"
                    style="@android:style/Widget.Spinner"
                    android:onClick="checkTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_comment"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>